# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 Jerry Needell
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-rfm"
description = "support for RFM9x and RFM69 radio modules"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jerry Needell", email = "jerryneedell@gmail.com"}
]
urls = {Homepage = "https://github.com/jerryneedell/CircuitPython_RFM"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "rfm",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["circuitpython_rfm"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
